Optimize performance and refresh DiaCare UI